# hail

./: .gitignore  .travis.yml  AUTHORS  Doxyfile  INTERFACE  LICENSE  Makefile.am  NEWS  README  cld.h  cld_msg.h  cldb.c  cldb.h  configure.ac  mk-storagedb.sql  msg.c  server.c  session.c  util.c
chunkd/: .gitignore  Makefile.am  be-fs.c  chunkd.h  cldu.c  config.c  objcache.c  object.c  selfcheck.c  server.c  util.c
cld/: .gitignore  Makefile.am  cld.h  cldb.c  cldb.h  cldbadm.c  msg.c  server.c  session.c  util.c
doc/: Makefile.am  api.txt  cfgfile.txt  chcli.8  chcli.cfg  chcli.txt  chunkd.8  cld.8  cldcli.8  concept.txt  contributions.txt  doxygen.txt  logging.txt  notes.txt  release-process.txt  setup.txt  signals.txt  todo.txt
include/: Makefile.am  anet.h  chunk-private.h  chunk_msg.h  chunkc.h  chunksrv.h  cld-private.h  cld_common.h  cld_msg.h  cldc.h  hail_log.h  hail_private.h  hstor.h  htab.h  httputil.h  libtimer.h  ncld.h  objcache.h  stc.h
lib/: .gitignore  Makefile.am  atcp.c  chunkdc.c  chunksrv.c  cld_msg_rpc.x  cldc-dns.c  cldc-tcp.c  cldc-udp.c  cldc.c  common.c  hstor.c  htab.c  httputil.c  huri.c  hutil.c  libchunkdc-uninstalled.pc.in  libchunkdc.pc.in  libcldc-uninstalled.pc.in  libcldc.pc.in  libhail-uninstalled.pc.in  libhail.pc.in  libtimer.c  pkt.c  stc.c  uri.c  xdr_sizeof.c
m4/: .gitignore  Makefile.am
pkg/: chunkd.init  chunkd.spec  chunkd.sysconf  cld.init  cld.spec  cld.sysconf  hail.spec
server/: Makefile.am  be-fs.c  chunkd.h  cld.h  cld_msg.h  cldb.c  cldb.h  cldbadm.c  cldu.c  config.c  msg.c  object.c  selfcheck.c  server.c  session.c  storage.c  storaged.h  util.c  volume.c
test/: .gitignore  Makefile.am  auth.c  basic-io.c  basic-object.c  basic-session.c  clean-db  daemon-running  it-works.c  large-object.c  libtest.c  load-file-event.c  lock-file-event.c  lock-file.c  lotsa-objects.c  nop.c  objcache-unit.c  pid-exists  prep-db  save-file-event.c  selfcheck-unit.c  server-test.cfg  start-daemon  start-daemon.real.in  stop-daemon  test.h  util.c
test/chunkd/: .gitignore  Makefile.am  auth.c  basic-object.c  clean-db  cp.c  get-part.c  it-works.c  large-object.c  libtest.c  lotsa-objects.c  nop.c  objcache-unit.c  pid-exists  prep-db  selfcheck-unit.c  server-test.cfg  ssl-cert.pem  ssl-key.pem  start-daemon  start-daemon.real.in  stop-daemon  test.h
test/cld/: .gitignore  Makefile.am  basic-io.c  basic-session.c  lock-file.c  pid-exists  start-daemon  test.h
tools/: .gitignore  Makefile.am  chcli.c  cldcli.c  cldfuse.c
